fix moving text overflow

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -23,7 +23,7 @@
   --color-bg: var(--color-white);
   --color-fg: var(--color-off-black);
   --color-placeholder: var(--color-gray-dark);
-  --color-link: var(--color-purple);
+  --color-link: var(--color-gray-dark);
   --color-focus: var(--color-orange);
   --color-form-bg: var(--color-off-white);
   --color-form-fg: var(--color-off-black);
